; ModuleID = '/home/carl/AnghaBench/tmux/extr_environ.c_environ_unset.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_environ.c_environ_unset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.environ = type { i32 }
%struct.environ_entry = type { %struct.environ_entry*, %struct.environ_entry* }

@environ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @environ_unset(%struct.environ* %0, i8* %1) #0 {
  %3 = alloca %struct.environ*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.environ_entry*, align 8
  store %struct.environ* %0, %struct.environ** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.environ*, %struct.environ** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call %struct.environ_entry* @environ_find(%struct.environ* %6, i8* %7)
  store %struct.environ_entry* %8, %struct.environ_entry** %5, align 8
  %9 = icmp eq %struct.environ_entry* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %26

11:                                               ; preds = %2
  %12 = load i32, i32* @environ, align 4
  %13 = load %struct.environ*, %struct.environ** %3, align 8
  %14 = load %struct.environ_entry*, %struct.environ_entry** %5, align 8
  %15 = call i32 @RB_REMOVE(i32 %12, %struct.environ* %13, %struct.environ_entry* %14)
  %16 = load %struct.environ_entry*, %struct.environ_entry** %5, align 8
  %17 = getelementptr inbounds %struct.environ_entry, %struct.environ_entry* %16, i32 0, i32 1
  %18 = load %struct.environ_entry*, %struct.environ_entry** %17, align 8
  %19 = call i32 @free(%struct.environ_entry* %18)
  %20 = load %struct.environ_entry*, %struct.environ_entry** %5, align 8
  %21 = getelementptr inbounds %struct.environ_entry, %struct.environ_entry* %20, i32 0, i32 0
  %22 = load %struct.environ_entry*, %struct.environ_entry** %21, align 8
  %23 = call i32 @free(%struct.environ_entry* %22)
  %24 = load %struct.environ_entry*, %struct.environ_entry** %5, align 8
  %25 = call i32 @free(%struct.environ_entry* %24)
  br label %26

26:                                               ; preds = %11, %10
  ret void
}

declare dso_local %struct.environ_entry* @environ_find(%struct.environ*, i8*) #1

declare dso_local i32 @RB_REMOVE(i32, %struct.environ*, %struct.environ_entry*) #1

declare dso_local i32 @free(%struct.environ_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
